Added changes to subsystems page made by aaryan

--- a/about.html
+++ b/about.html
@@ -21,25 +21,22 @@
 
 <body>
     <section class="sub-header">
-        <nav class="d-nav">
+        <nav>
             <a href="index.html"><img src="images/WeMarsLogo.png"></a>
             <div class="nav-links" id="navLinks">
+                <!--Close icon from Font Awesome icons-->
                 <ul>
-                    <li><a href="index.html"><span class="top"><span>Home</span></span><span
-                                class="bottom"><span>Home</span></span></a></li>
-                    <li><a href="about.html"><span class="top"><span>About</span></span><span
-                                class="bottom"><span>About</span></span></a></li>
-                    <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span
-                                class="bottom"><span>Subsystems</span></span></a></li>
-                    <li><a href="progress.html"><span class="top"><span>Progress</span></span><span 
-                                class="bottom"><span>Progress</span></a></li>
-                    <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span
-                                class="bottom"><span>Sponsor</span></span></a></li>
+                    <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
+                    <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
+                    <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
+                    <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
+                    <li><a href="Join.html"><span class="top"><span>Join Us</span></span><span class="bottom"><span>Join Us</span></span></a></li>
                 </ul>
             </div>
         </nav>
 
         <nav class="m-nav">
+
             <div class="responsive-nav">
                 <img src="images/WeMarsLogo.png" class="logo">
                 <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
@@ -47,8 +44,8 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="subsystems.html">Subsystems</a>
-                    <a href="progress.html">Progress</a>
                     <a href="sponsor.html">Sponsor</a>
+                    <a href="Join.html">Join Us</a>
                 </div>
             </div>
         </nav>
@@ -64,47 +61,47 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/projleadbg2.jpg">
-                    <img class="person__img" id="projlead2" src="images/aboutpage/ProjLeadThomas-removebg-preview.png"
+                    <img class="person__img" id="projlead2" src="images/aboutpage/dev_headshot-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Thomas Naish</h1>
-            <h4>Project Manager</h4>
+            <h1>Dev Patel</h1>
+            <h4>Co-President</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/projLeadbg.jpg">
-                    <img class="person__img" id="projLead" src="images/aboutpage/ProjLead-removebg-preview.png"
+                    <img class="person__img" id="projLead" src="images/aboutpage/mnoble_headshot-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Clara Levy</h1>
-            <h4>Vice-Project Manager</h4>
+            <h1>Mark Noble</h1>
+            <h4>Co-President</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/elecleadbg.jpg">
-                    <img class="person__img" id="eleclead" style="bottom: -35;"
-                        src="images/aboutpage/ElecLeadWyatt-removebg-preview.png" alt="Profile photo">
+                    <img class="person__img" id="mechlead" style="bottom: -35;"
+                        src="images/aboutpage/chris-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Wyatt Welyhorsky</h1>
-            <h4>Electrical Lead</h4>
+            <h1>Chris Latosinsky</h1>
+            <h4>Mechanical Lead</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/elec2bg.jpg">
-                    <img class="person__img" src="images/aboutpage/ElecLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__img" id="mechlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Sean McBride</h1>
-            <h4>Electrical Lead</h4>
+            <h1>Currently Hiring</h1>
+            <h4>Mechanical Lead</h4>
         </div>
     </div>
 
@@ -113,46 +110,46 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/softwarebg.png">
-                    <img class="person__img" src="images/aboutpage/SoftLead-removebg-preview.png" alt="Profile photo">
+                    <img class="person__img" id="softlead" src="images/aboutpage/Bryan2-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Abeer Muhammad</h1>
-            <h4>Programming Lead</h4>
+            <h1>Bryan Heddle</h1>
+            <h4>Software Lead</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" src="images/aboutpage/SoftLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__img" id="softlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Dev Patel</h1>
-            <h4>Programming Lead</h4>
+            <h1>Currently Hiring</h1>
+            <h4>Software Lead</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/buslead2bg.jpg">
-                    <img class="person__img" id="buislead" src="images/aboutpage/BusLeadNathan-removebg-preview.png"
+                    <img class="person__img" id="eleclead" src="images/aboutpage/BEN_HEADSHOT-removebg-preview.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Nathan Eng</h1>
-            <h4>Business Lead</h4>
+            <h1>Ben Ashman</h1>
+            <h4>Electrical Lead</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/buisleadbg2.jpg">
-                    <img class="person__img" id="buislead" src="images/aboutpage/BusinessLeadRad-removebg-preview.png"
+                    <img class="person__img" id="eleclead2" src="images/aboutpage/Empty-Profile-Picture.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Syed Rad</h1>
-            <h4>Business Lead</h4>
+            <h1>Currently Hiring</h1>
+            <h4>Electrical Lead</h4>
         </div>
     </div>
 
@@ -163,10 +160,10 @@
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/arminbg.jpg">
                     <img class="person__img" id="sciencelead"
-                        src="images/aboutpage/ArminScienceLead-removebg-preview.png" alt="Profile photo">
+                        src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Armin Bradaric</h1>
+            <h1>Currently Hiring</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -174,11 +171,11 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/scileadbg.webp">
-                    <img class="person__img" id="scilead" src="images/aboutpage/ScienceLeadJames-removebg-preview.png"
+                    <img class="person__img" id="scilead" src="images/aboutpage/Empty-Profile-Picture.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>James Krizsan</h1>
+            <h1>Currently Hiring</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -186,24 +183,24 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/mechbg.jpg">
-                    <img class="person__img" id="mechlead" src="images/aboutpage/MechLeadHanro-removebg-preview.png"
+                    <img class="person__img" id="buislead" src="images/aboutpage/Armaan.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Hanro Delport</h1>
-            <h4>Mechanical Lead</h4>
+            <h1>Armaan __</h1>
+            <h4>Business Lead</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/mechbg2.jpg">
-                    <img class="person__img" id="mechlead2" src="images/aboutpage/MechLeadIsabel-removebg-preview.png"
+                    <img class="person__img" id="buislead2" src="images/aboutpage/Empty-Profile-Picture.png"
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Isabel Naish</h1>
-            <h4>Mechanical Lead</h4>
+            <h1>Currently Hiring</h1>
+            <h4>Business Lead</h4>
         </div>
     </div>
 
