--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <ul>
                         <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
                         <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
-                        <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>\
-                        <li><a href="progress.html"><span class="top"><span>Progress</span></span><span class="bottom"><span>Progress</span></a></li>
+                        <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
                         <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
+                        <li><a href="Join.html"><span class="top"><span>Join Us</span></span><span class="bottom"><span>Join Us</span></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -48,8 +48,8 @@
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="subsystems.html">Subsystems</a>
-                        <a href="progress.html">Progress</a>
                         <a href="sponsor.html">Sponsor</a>
+                        <a href="Join.html">Join Us</a>
                     </div>
                 </div>
             </nav>
@@ -95,11 +95,19 @@
   <!--Mobile Formatting-->
   <section class="mobile-format">
     <div class="f-m">
-        <img src="images/TeamPhotoSub.png">
-    </div>
-
-    <div class="f-m">
         <img src="images\Wemars members.jpg">
+    </div>
+    <div class="sf-m">
+        <section class="whoAreWe-m">
+            <div class="indexBlurbBox">
+                <h2>Who are we?</h2>
+                <div class="header-line"></div>
+                <p>The Western Engineering Mars Rover team is a student-led club driven towards the goal of building a rover that is capable of accomplishing various tasks in environments similar to ones found on the surface of mars. 
+                    Our team is comprised of various students from multiple disciplines. 
+                    As an organization, we strive to inspire our members and members of the public to become more 
+                    involved in science and technology through robotics</p>
+            </div>
+        </section>
     </div>
 
     </section>
@@ -122,7 +130,7 @@
         </section>
 
         <section class="team-photo">
-            <img src="images/TeamPhotoSub.png">
+            <img src="images/Wemars members.jpg">
         </section>
 
         
@@ -131,7 +139,7 @@
             <div class="indexBlurbBox">
                 <h2>Our Goal</h2>
                 <div class="header-line"></div>
-                <p>Our goal as a team is to compete in and win the Canadian International Rover Challenge. </p>
+                <p>Our goal as a team is first and foremost to create a positive space for students to learn and actively contribute. We are also pursuing the goal of taking home first place at the Canadian International Rover Challenge, and competing at URC. </p>
             </div>
         </section>
 
