--- a/sponsor.html
+++ b/sponsor.html
@@ -28,22 +28,17 @@
             <div class="nav-links" id="navLinks">
                 <!--Close icon from Font Awesome icons-->
                 <ul>
-                    <li><a href="index.html"><span class="top"><span>Home</span></span><span
-                                class="bottom"><span>Home</span></span></a></li>
-                    <li><a href="about.html"><span class="top"><span>About</span></span><span
-                                class="bottom"><span>About</span></span></a></li>
-                    <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span
-                                class="bottom"><span>Subsystems</span></span></a></li>
-                    <li><a href="progress.html"><span class="top"><span>Progress</span></span><span 
-                                class="bottom"><span>Progress</span></a></li>
-                    <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span
-                                class="bottom"><span>Sponsor</span></span></a></li>
+                    <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
+                    <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
+                    <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
+                    <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
+                    <li><a href="Join.html"><span class="top"><span>Join Us</span></span><span class="bottom"><span>Join Us</span></span></a></li>
                 </ul>
             </div>
         </nav>
-        <h1>Sponsors</h1>
 
         <nav class="m-nav">
+
             <div class="responsive-nav">
                 <img src="images/WeMarsLogo.png" class="logo">
                 <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
@@ -51,8 +46,8 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="subsystems.html">Subsystems</a>
-                    <a href="progress.html">Progress</a>
                     <a href="sponsor.html">Sponsor</a>
+                    <a href="Join.html">Join Us</a>
                 </div>
             </div>
         </nav>
