--- a/subsystems.html
+++ b/subsystems.html
@@ -20,12 +20,13 @@
             <nav>
                 <a href="index.html"><img src="images/WeMarsLogo.png"></a>
                 <div class="nav-links" id="navLinks">
+                    <!--Close icon from Font Awesome icons-->
                     <ul>
                         <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
                         <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
                         <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
-                        <li><a href="progress.html"><span class="top"><span>Progress</span></span><span class="bottom"><span>Progress</span></a></li>
                         <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
+                        <li><a href="Join.html"><span class="top"><span>Join Us</span></span><span class="bottom"><span>Join Us</span></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -33,6 +34,7 @@
             <h1>Subsystems</h1>
 
             <nav class="m-nav">
+
                 <div class="responsive-nav">
                     <img src="images/WeMarsLogo.png" class="logo">
                     <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
@@ -40,43 +42,63 @@
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="subsystems.html">Subsystems</a>
-                        <a href="progress.html">Progress</a>
                         <a href="sponsor.html">Sponsor</a>
+                        <a href="Join.html">Join Us</a>
                     </div>
                 </div>
             </nav>
-
         </section>
 
+<div>
+    <section class = "sec-01">
+        <div class="subcontainer">
+            <div class="subcontent">
+                <div class="subimages" href="javascript:void(0);" onclick="toggleMechCard()">
+                     <img src = "./images/Mechanical/mech1.png">
+                </div>
+                <div class = "subtext-box">
+                    <h3>Mechanical</h3>
+                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
+                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                        </p>
+                </div>
+            </div>
 
-<div id="app" class="aboutcontainer">
-    
-    <card
-        data-image="images/Mechanical/simple-mechanical-projects.webp">
-        <h1 slot="header">Mechanical</h1>
-        <p slot="content" class="aboutblurb">The mechanical team at WEMARS plays an integral role in the physical realization of the club's projects. Their expertise lies in designing, testing, and constructing the rover's chassis and arm, ensuring both robustness and functionality in challenging environments. Beyond assembly, they are also deeply involved in researching and developing innovative methods for casting carbon fiber components for the rover. This focus on advanced materials and construction techniques is key to enhancing the rover's durability and efficiency, positioning the team at the forefront of rover design and engineering.</p>
-    </card>
-    <card
-        data-image="images/Electrical/electricalLilDudes.webp">
-        <h1 slot="header">Electrical</h1>
-        <p slot="content" class="aboutblurb">The WE Mars electrical team uses Altium software to design all of the electrical systems used on the Rover. From the most basic usb connector to the more complex motor control and CAN Bus boards they are all designed and soldered together by the WE Mars electrical team. All the electrical control and design used on our rover is constructed by our electrical team.</p>
-    </card>
-    <card
-        data-image="images/Software/softwareLilDude.webp">
-        <h1 slot="header">Software</h1>
-        <p slot="content" class="aboutblurb">Our software team is central to our university's rover project, handling both the development of the code that drives the rover and the design of the homebase interface. This dashboard is crucial for interpreting the data from our onboard sensors, enabling our team to monitor and guide the rover effectively. With tools like GPS for accurate tracking, cameras for live visuals, and a LiDAR system for assessing terrain depths, we're equipped to handle challenges in real-time. This project showcases our commitment to technological innovation.</p>
-    </card>
-    <card
-        data-image="images/Buis/lilBuisDudes.webp">
-        <h1 slot="header">Business</h1>
-        <p slot="content" class="aboutblurb">The WE Mars business team plays a crucial role in the sustainability and growth of the club. They are responsible for reaching out to potential sponsors, establishing and nurturing vital relationships with them. Their efforts ensure a consistent stream of support and resources, which are essential for the successful execution of the club's activities and events. This team serves as the bridge between WEMARS and the external business community, facilitating the club's objectives and projects.</p>
-    </card>
-    <card
-        data-image="images/Science/sciencecard.webp">
-        <h1 slot="header">Science</h1>
-        <p slot="content" class="aboutblurb">The WE Mars science team's primary responsibility involves researching innovative methods to analyze soil for definitive signs of life, a task that blends biological insight with technical expertise. Additionally, they are tasked with designing sophisticated mechanical systems capable of autonomously testing the soil. This blend of scientific inquiry and engineering acumen is crucial for the team's success in pushing the boundaries of soil analysis and astrobiology.</p>
-    </card>
+            <div class="subcontent">
+                <div class="subimages">
+                     <img src = "./images/Electrical/schematics2.png">
+                </div>
+                <div class = "subtext-box">
+                    <h3>Electrical</h3>
+                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
+                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                        </p>
+                </div>
+            </div>
+
+            <div class="subcontent">
+                <div class="subimages">
+                     <img src = "./images/Software/image.jpg">
+                </div>
+                <div class = "subtext-box">
+                    <h3>Software</h3>
+                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
+                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                        </p>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 </div>
+
+<div class="m-card" id="Mechanical">
+    <div id="m-container">
+        <button class="close-btn" onclick="toggleMechCard()">X</button>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="subsystem.js"></script>
 
@@ -90,6 +112,61 @@
                 x.style.display = "block";
             }
         }
+
+        function toggleMechCard() {
+            var x = document.getElementById("Mechanical");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        function toggleElecCard() {
+            var x = document.getElementById("Electrical");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        function toggleSoftCard() {
+            var x = document.getElementById("Software");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        function toggleBusCard() {
+            var x = document.getElementById("Business");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        function toggleSciCard() {
+            var x = document.getElementById("Science");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        ScrollReveal( {
+        reset: false, 
+        distance: '60px',
+        duration: 500,
+        delay: 400
+        });
+
+        ScrollReveal().reveal('.sec-01 .subimages', {delay: 500, origin: 'bottom'});
+        ScrollReveal().reveal('.subtext-box', {delay: 700, origin: 'right'});
 
     </script>
         
