Added modifications to about page made by nathan

--- a/subsystems.html
+++ b/subsystems.html
@@ -51,6 +51,7 @@
 
 <div>
     <section class = "sec-01">
+        <h1 class="subteamt">Click on the images to learn more !</h1>
         <div class="subcontainer">
             <div class="subcontent">
                 <div class="subimages" href="javascript:void(0);" onclick="toggleMechCard()">
@@ -161,9 +162,23 @@
         function toggleMechCard() {
             var card = document.getElementById("Mechanical");
             var overlay = document.getElementById("overlay");
-            card.classList.toggle("active"); 
-            overlay.classList.toggle("active");
+
+            if (card.classList.contains("active")) {
+                card.classList.remove("active");
+                overlay.classList.remove("active");
+
+                setTimeout(function() {
+                    card.style.visibility = "hidden";
+                    overlay.style.visibility = "hidden";
+                }, 600); 
+            } else {
+                card.style.visibility = "visible";
+                overlay.style.visibility = "visible";
+                card.classList.add("active");
+                overlay.classList.add("active");
+            }
         }
+
 
         function toggleElecCard() {
             var x = document.getElementById("Electrical");
