--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
         </div>
     </div>
 
-    <section class="footer">
+    <section class="teamfooter">
         <h2>WE Mars Team</h2>
         <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
         <a href="sponsor.html" class="hero-btn" id="contact-btn">CONTACT US</a>
