--- a/Join.html
+++ b/Join.html
@@ -93,7 +93,7 @@
             </div>
             <div class="form-row">
                 <div class="input-data">
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="user@uwo.ca" pattern="[a-zA-Z0-9._%+-]+@uwo.ca" required>
                     <div class="underline"></div>
                     <label for="email">Email Address</label>
                 </div>
