--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                     <img class="person__img" id="mechlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Mechanical Lead</h4>
         </div>
     </div>
@@ -124,7 +124,7 @@
                     <img class="person__img" id="softlead2" src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Software Lead</h4>
         </div>
 
@@ -148,7 +148,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Electrical Lead</h4>
         </div>
     </div>
@@ -163,7 +163,7 @@
                         src="images/aboutpage/Empty-Profile-Picture.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -175,7 +175,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -187,7 +187,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Armaan __</h1>
+            <h1>Armaan Jassal</h1>
             <h4>Business Lead</h4>
         </div>
 
@@ -199,7 +199,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Currently Hiring</h1>
+            <h1>Hiring</h1>
             <h4>Business Lead</h4>
         </div>
     </div>
