--- a/subsystems.html
+++ b/subsystems.html
@@ -50,8 +50,8 @@
         </section>
 
 <div>
+    <div><h1 class="subteamt">Click on the images to learn more !</h1></div>
     <section class = "sec-01">
-        <h1 class="subteamt">Click on the images to learn more !</h1>
         <div class="subcontainer">
             <div class="subcontent">
                 <div class="subimages" href="javascript:void(0);" onclick="toggleMechCard()">
@@ -59,8 +59,11 @@
                 </div>
                 <div class = "subtext-box">
                     <h3>Mechanical</h3>
-                    <p>Yellow Jack lateen sail grog draft no prey, no pay squiffy hail-shot Sink me chandler lanyard. Hail-shot loaded to the gunwalls barkadeer landlubber or just lubber Blimey bilge ballast yard cutlass trysail. Sheet Jack Tar Sea Legs lanyard starboard pink Gold Road scuttle long boat doubloon.
-                        Weigh anchor pink Admiral of the Black Barbary Coast draught rum gangway rutters doubloon lugger. Prow Letter of Marque starboard long clothes crow's nest barkadeer lee Arr aft heave to. Lanyard Sink me lugsail squiffy topmast scourge of the seven seas mutiny jib jolly boat tack.
+                    <p>The WE Mars mechanical team is responsible for the design, testing, and assembly of all the components that make up our rover. From material selection and CAD to prototyping and manufacturing, we ensure that every part of the rover meets our standards. Our team focuses on creating innovative, reliable, and efficient designs to tackle any challenge our rover might face, whether it’s navigating rough terrain or performing delicate tasks with a robotic arm.
+
+                        Collaboration is key to our success, as we work closely with the electrical and software teams to integrate our mechanical systems.
+                        
+                        Currently, we are working on a new rover, aiming to surpass our previous rovers capabilities with our gained knowledge from past competitions.
                         </p>
                 </div>
             </div>
@@ -144,6 +147,18 @@
         </div>
     </div>
 </div>
+
+<section class="footer">
+    <h2>WE Mars Team</h2>
+    <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
+    <a href="sponsor.html" class="hero-btn" id="contact-btn">CONTACT US</a>
+    <div class="icons-container">
+        <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
+        <div class="icons"><a href="https://www.instagram.com/we.mars/"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+        <div class="icons"><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/about/"><i class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+    </div>
+    <p>Made by WeMars members</p>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="subsystem.js"></script>
